--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.18",
+    "convex": "^1.31.5",
     "lucide-react": "^0.562.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-hook-form": "^7.71.1",
     "react-router": "^7.12.0",
+    "react-router-dom": "^7.12.0",
     "sonner": "^2.0.7",
     "tailwindcss": "^4.1.18"
   },
